# Parallel-TCP-IP-Socket-Server-With-Multithreading

./: sever.c
parallel client-servet trading/client/: CClientTrader.cpp  CClientTrader.h  CMakeLists.txt  SClientStructures.h  main.cpp
parallel client-servet trading/server/: CMakeLists.txt  CTradingSystem.cpp  CTradingSystem.h  STradingSystemStructures.h  main.cpp
